# ghc-prof-flamegraph

./: .gitignore  .gitmodules  LICENSE  ProfFile.hs  README.md  blog-post.md  ghc-prof-flamegraph.cabal  ghc-prof-flamegraph.hs  stack.yaml
examples/: binary-trees.hs  binary-trees.prof  hoogle.prof  packdeps.prof
