name:                ghc-prof-flamegraph
version:             0.2.0.0
synopsis:            Generates flamegraphs from GHC .prof files.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
description:
  This is a small tool to convert GHC time profiling reports into a format
  understandable by the
  FlameGraph (<https://github.com/brendangregg/FlameGraph>) tool.
  .
  To use, first convert a `.prof` file into the flame graph format using
  @ghc-prof-flamegraph@:
  .
  > $ cat ~/src/packdeps/packdeps.prof | ghc-prof-flamegraph > packdeps.prof.folded
  .
  Then you can use the file to produce an svg image, using the
  @flamegraph.pl@ script:
  .
  > $ cat packdeps.prof.folded | ~/src/FlameGraph/flamegraph.pl > packdeps.prof.svg
  .
  You can also generate a flamegraph using the allocation measurements,
  using the @--alloc@ flag, number of entries using @--entries@ flag, number of
  bytes allocated using @--bytes@. In order to use @--bytes@ or @--ticks@ flag one
  have to run program with @+RTS -P -RTS@ in order to get those measurements.

data-files:
  FlameGraph/flamegraph.pl

source-repository head
  type:     git
  location: https://github.com/fpco/ghc-prof-flamegraph

executable ghc-prof-flamegraph
  main-is:             ghc-prof-flamegraph.hs
  build-depends:       base >=4.6 && <5
                     , filepath
                     , optparse-applicative
                     , process
  other-modules:       ProfFile
                     , Paths_ghc_prof_flamegraph
  default-language:    Haskell2010
  ghc-options:         -Wall
