name:                ghc-prof-flamegraph
version:             0.2.0.1
synopsis:            Generates flamegraphs from GHC .prof files.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
description:
  This is a small tool to render GHC time profiling reports as interactive SVG flame graphs
  using <https://github.com/brendangregg/FlameGraph FlameGraph>. Basic usage:
  .
  > ghc-prof-flamegraph myprogram.prof
  .
  You can also generate a flamegraph using the allocation measurements using the --alloc flag.
  .
  The flamegraph.pl script is bundled with this package, so you don't need to install it
  (though you need to have Perl installed).

data-files:
  FlameGraph/flamegraph.pl

source-repository head
  type:     git
  location: https://github.com/fpco/ghc-prof-flamegraph

executable ghc-prof-flamegraph
  main-is:             ghc-prof-flamegraph.hs
  build-depends:       base >=4.6 && <5
                     , filepath
                     , optparse-applicative
                     , process
  other-modules:       ProfFile
                     , Paths_ghc_prof_flamegraph
  default-language:    Haskell2010
  ghc-options:         -Wall
